# memory

./: README.md  cli.py  main.py  pyproject.toml
claude_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
hooks/: post_session.sh
memory/: __init__.py  cli.py  manager.py  store.py
memory_load/: config.py  indexer.py  knowledge_graph.py  mcp_server.py  search.py
tests/: test_cli.py  test_memory.py
