[project]
name = "memory-load"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "click>=8.3.2",
    "fastmcp>=3.2.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
]

[project.scripts]
memory-load = "cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
